@@ -1,0 +1,3 @@
+Remove debian/upstream/metadata in native source package.
+Certainty: certain
+Fixed-Lintian-Tags: upstream-metadata-in-native-source
